fixed alignment in attendance, translated content pages on main page

--- a/CSS/Content.css
+++ b/CSS/Content.css
@@ -914,11 +914,11 @@ ul{
 }
 #from-time{
     position:relative;
-    left:25px;
+    left:50px;
 }
 #to-time{
     position:relative;
-    left:25px;
+    left:50px;
 }
 .confirm-from-time{
     display:inline-block;
